--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,3 +1,4 @@
 highlight : androidstudio
 logo : assets/logo.png
 footnote : "2017 - Leeds JVM Thing, Kotlin Evening"
+theme-override : assets/css/theme.css
